syntax = "proto3";
 
package server_alpha.notification;

option go_package = "github.com/wwi21seb-projekt/alpha-shared/proto/server_alpha/notification";
 
import "server_alpha/common/common.proto";
import "server_alpha/user/user.proto";


// ------------------ Notification Service ------------------ //

service NotificationService{
    rpc GetNotifications(common.Empty) returns (GetNotificationsResponse);
    rpc DeleteNotification(DeleteNotificationRequest) returns (common.Empty);
    rpc SendNotification(SendNotificationRequest) returns (common.Empty);
}
 
// ------------------ Messages ------------------ //

enum NotificationType {
    FOLLOW = 0;
    REPOST = 1;
}

message Notification{
    string notification_id = 1;
    string timestamp = 2;
    NotificationType notfication_type = 3;
    user.User user = 4;
}
 
 
message GetNotificationsResponse{
    repeated Notification notifications = 1;
}
 
 
message DeleteNotificationRequest{
    string notification_id = 1;
}
 
message SendNotificationRequest{
    string notification_type = 1;
    string sender = 2;
}
 
