syntax = "proto3";

package server_alpha.user.v1;

import "server_alpha/common/v1/common.proto";
import "server_alpha/image/v1/image.proto";


// ------------------ Services ------------------ //

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

// --------------- Domain Objects --------------- //

message User {
  string username = 1;
  string nickname = 2;
  image.v1.Picture picture = 3;
}

// ------------------ Requests ------------------ //

message ListUsersRequest {
  repeated string usernames = 1;
}

message GetUserRequest {
  string username = 1;
}

message SearchUsersRequest {
  common.v1.PaginationRequest pagination = 1;
  string query = 2;
}

message UpdateUserRequest {
  string nickname = 1;
  string status = 2;
  optional string base64_picture = 3; // if the user wants to update the picture, the base64_picture field must be set
  // if it's not set, it's an no-op. if it's set to an empty string, the picture will be changed to the default one
}

// ------------------ Responses ------------------ //

message GetUserResponse {
  string username = 1;
  string nickname = 2;
  string status = 3;
  image.v1.Picture picture = 4;
  int32 follower_count = 5;
  int32 following_count = 6;
  int32 post_count = 7;
  string subscription_id = 8; // if present, the current user is following the requested user
}

message UpdateUserResponse {
  string nickname = 1;
  string status = 2;
  image.v1.Picture picture = 3;
}

message SearchUsersResponse {
  repeated User users = 1;
  common.v1.PaginationResponse pagination = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  common.v1.PaginationResponse pagination = 2;
}
